tests/NormalTests/paczka1/fuzzy1/12609198.err
Error in line 14: Ua9Vh9Gnl A178 74,3
Error in line 25: xNljdY A30a 118,0
Error in line 18: Ua9Vh9Gnl A623 16,9
Error in line 28: Tnr A304 94,4
